kubernetes/base/applications/api-main/api-main.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-main
  namespace: pintask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-main
  template:
    metadata:
      labels:
        app: api-main
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - api-main
                topologyKey: kubernetes.io/hostname
      terminationGracePeriodSeconds: 60
      containers:
        - name: api-main-task
          image: api-main-image
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 4000
          resources:
            requests:
              cpu: 100m
              memory: 250Mi
            limits:
              cpu: 200m
              memory: 350Mi
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 12
