kubernetes/base/applications/api-main/api-main.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-main
  namespace: pintask
  labels:
    app: api-main
spec:
  selector:
    app: api-main
  ports:
    - name: http
      port: 4000
      targetPort: http
  type: ClusterIP
