kubernetes/base/applications/api-main/api-main.network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-main-network
  namespace: pintask
spec:
  podSelector:
    matchLabels:
      app: api-main
  ingress:
    - ports:
        - port: 4000
          protocol: TCP
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              name: pintask
  policyTypes:
    - Ingress
    - Egress
